graficke efekty pro odhlasovani a prihlasovani.

--- a/app/views/life_guards/subscribe.js.erb
+++ b/app/views/life_guards/subscribe.js.erb
@@ -1,2 +1,2 @@
 var html = '<%= escape_javascript (render "entry", :life_guard => [@life_guard], :life_guarding_timespan => @life_guarding_timespan) %>';
-$('#life_guard-<%=@life_guard.at%>-<%=@life_guard.position%>').html(html);
+$('#life_guard-<%=@life_guard.at%>-<%=@life_guard.position%>').html(html).show("highlight", 2000);
