Pridani potvrzeni nekterych prikazu pro smazani.

--- a/app/views/life_guards/_entry.html.erb
+++ b/app/views/life_guards/_entry.html.erb
@@ -1,6 +1,6 @@
   <%= life_guard.map{|e| e.profile.full_name}.to_sentence%>
   <% if can? :unsubscribe, :life_guard %>
-    <%= link_to unsubscribe_life_guarding_timespan_life_guard_path(life_guarding_timespan, life_guard.first), :method => :put, :remote => true do %>
+    <%= link_to unsubscribe_life_guarding_timespan_life_guard_path(life_guarding_timespan, life_guard.first), :method => :put, :remote => true, :confirm => "Opravdu odhlásit #{life_guard.first.profile.full_name}?" do %>
       <i class="icon-remove"></i>
     <% end %>
   <% end %>
