--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -12,7 +12,7 @@
         <i class="icon-download"></i>
       </a>
       <% if can? :destroy, photo %>
-        <%= link_to [photo.gallery, photo], :method=>:delete, :class=> 'btn btn-danger pull-right' do %>
+        <%= link_to [photo.gallery, photo], :method=>:delete, :class=> 'btn btn-danger pull-right', :confirm => "Opravdu smazat fotografii?" do %>
         <i class="icon-trash"></i>
         <% end %>
       <% end %>
