--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -11,6 +11,9 @@
   <% end %>
 </ul>
 <ul class="nav nav-tabs nav-stacked">
+  <% if can? :manage, Work %>
+    <li>Brigády</li>
+  <% end %>
   <% if can?(:create, Article) or can?(:read_members, User) %>
   <% end %>
    <% if can? :approve, Article %>
