--- a/app/views/events/_done_event.html.erb
+++ b/app/views/events/_done_event.html.erb
@@ -1,18 +1,17 @@
 <div class="media well well-small well-white">
   <div class="media-body">
     <% if current_user %>
-    <div class="pull-right">
-      <% if can? :edit, event %>
-        <%= link_to edit_event_path(event) do %>
-          Upravit
+      <div class="pull-right">
+        <% if can? :edit, event %>
+          <%= link_to edit_event_path(event) do %>
+            Upravit
+          <% end %>
         <% end %>
-        |
-      <% end %>
-      <% if current_user.participates?(event) %>
-        <%= render "participates" %>
-      <% end %>
+        <% if current_user.participates?(event) %>
+          | <%= render "participates" %>
+        <% end %>
+      </div>
     <% end %>
-    </div>
     <h4 class="media-heading">
       <%= l event.start_datetime.to_date, :format => :with_day_and_year %>
       <%= link_to_unless event.link.blank?, event.name, event.link %>
