--- a/app/views/events/_participation_buttons.html.erb
+++ b/app/views/events/_participation_buttons.html.erb
@@ -1,5 +1,5 @@
 <div class="btn-group">
-  <%= link_to participate_event_path(event),:confirm => "Opravud se přihlásit k akci? Odhlásit Vás může jen vedoucí akce.", :class => "btn btn-mini" do %>
+  <%= link_to participate_event_path(event), :method => :put, :confirm => "Opravud se přihlásit k akci? Odhlásit Vás může jen vedoucí akce.", :class => "btn btn-mini" do %>
     Přijdu <%= glyph :ok %>
   <% end %>
   <a href="#" class="btn btn-mini">Možná</a>
