--- a/app/views/events/_done_event.html.erb
+++ b/app/views/events/_done_event.html.erb
@@ -18,9 +18,9 @@
       <small>(<%= event.event_type %>)</small>
     </h4>
     <div class="row">
-      <div class="span2">
+      <div class="span3">
         <div class="row">
-          <div class="span2">
+          <div class="span3">
             <% unless event.start_datetime.hour == 0 and event.start_datetime.min == 0 %>
               <strong>
                 <%= l event.start_datetime, :format => :just_time %> 
@@ -32,9 +32,13 @@
           </div>
         </div>
         <div class="row">
-          <div class="span2">
-            place place place
+          <div class="span3">
             <%= event.place %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span3">
+            <%= render "participants", :event => event %>
           </div>
         </div>
       </div>
