--- a/app/views/events/_participants.html.erb
+++ b/app/views/events/_participants.html.erb
@@ -1,14 +1,7 @@
 <% if can? :see_participants, event %>
   <ol>
     <% event.participants.each do |participant| %>
-      <%= content_tag_for :li, participant do %>
-        <%= participant.full_name %>
-        <% if can? :unparticipate, Event %>
-          <%= link_to unparticipate_event_path(event, :participant_id => participant.id), :method => :put do %>
-            <%= glyph :remove %>
-          <% end %>
-        <% end %>
-      <% end %>
+      <%= render "participant", :participant => participant, :event => event %>
     <% end %>
   </ol>
 <% end %>
