oznaceni zucastnenych akci drobnou vizualni napovedou

--- a/app/assets/stylesheets/vzs.css.scss
+++ b/app/assets/stylesheets/vzs.css.scss
@@ -74,3 +74,8 @@ img.float.right {
 .well-white {
   background: white;
 }
+
+.well-yes {
+  border: 1px solid rgb(70, 136, 71);
+  box-shadow: inset 2px 2px 7px 1px rgba(70, 136, 0, 0.1);
+}
