oprava chyby v planovanych akcich

--- a/app/views/events/_done_event.html.erb
+++ b/app/views/events/_done_event.html.erb
@@ -7,7 +7,7 @@
             Upravit
           <% end %>
         <% end %>
-        <% if current_user.participates?(event) %>
+        <% if current_user.try(:participates?, event) %>
           | <%= render "participates" %>
         <% end %>
       </div>
