pokus o pridani share na facebook tlacitka

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,6 +15,7 @@
           </div>
         <% end %>
       </div>
+      <%= facebook_button %>
       <%= render 'articles/meta_info', :article => @article %>
       <br />
 
