zadani velikosti obrazku - mensi skakani obsahu stranky pri nacitani

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
                 <%= render 'layouts/treninky' %>
 
                 <%= link_to 'http://www.cez.cz' do %>
-                  <%= image_tag("logo-skupina-cez.jpg", :class => "banner") %>
+                  <%= image_tag("logo-skupina-cez.jpg", :class => "banner", :size => "170x120") %>
                 <% end %>
 
                 <%= link_to 'http://www.vzp.cz' do %>
@@ -69,7 +69,7 @@
                 <% end %>
 
                 <%= link_to 'http://www.zpravodajedu.cz' do %>
-                  <%= image_tag("dukovany_160x160_v02.gif", :class => "banner") %>
+                  <%= image_tag("dukovany_160x160_v02.gif", :class => "banner", :size => "160x160") %>
                 <% end %>
 
               </div><!--/.well -->
