pridani wip verze treninku vyditelne pro predstavenstvo

--- a/app/views/layouts/_treninky.html.erb
+++ b/app/views/layouts/_treninky.html.erb
@@ -1,11 +1,17 @@
- <a href="/pages/21-treninky.html">
-   <ul class="unstyled well well-white">
-     <h5> Plavání mládež </h5>
-     <li>Pondělí <span class="pull-right">17:00 - 18:00</span></li>
-     <li>Pátek <span class="pull-right">18:00 - 19:00</span></li>
-     <h5> Plavání dospělí </h5>
-     <li>Pátek <span class="pull-right">19:00 - 20:00</span></li>
-     <%#<h5> Lezecký výcvik </h5>%>
-     <%#<li>Středa <span class="pull-right">18:00 - 19:00</span><br /><small>(sudá)</small> </li>%>
-   </ul>
-</a>
+<ul class="unstyled well well-white">
+  <% if can? :manage, Training %>
+    <%= link_to trainings_path do %>
+      <i class="icon-group"></i>
+      Vedení tréninků
+    <% end %>
+  <% end %>
+  <a href="/pages/21-treninky.html">
+    <h5> Plavání mládež </h5>
+    <li>Pondělí <span class="pull-right">17:00 - 18:00</span></li>
+    <li>Pátek <span class="pull-right">18:00 - 19:00</span></li>
+    <h5> Plavání dospělí </h5>
+    <li>Pátek <span class="pull-right">19:00 - 20:00</span></li>
+    <%#<h5> Lezecký výcvik </h5>%>
+    <%#<li>Středa <span class="pull-right">18:00 - 19:00</span><br /><small>(sudá)</small> </li>%>
+  </a>
+</ul>
