opravneni na treninky

--- a/app/views/layouts/_treninky.html.erb
+++ b/app/views/layouts/_treninky.html.erb
@@ -1,5 +1,5 @@
 <ul class="unstyled well well-white">
-  <% if can? :manage, Training %>
+  <% if can? :index, Training %>
     <%= link_to trainings_path do %>
       <i class="icon-group"></i>
       Vedení tréninků
