umozneni zapisovani neclenu na hlidani

--- a/app/views/life_guarding_timespans/_modal_template.html.erb
+++ b/app/views/life_guarding_timespans/_modal_template.html.erb
@@ -7,6 +7,8 @@
   </div>
   <div class="modal-footer">
     <button class="btn" data-dismiss="modal">Zrušit</button>
-    <button class="btn btn-primary">Uložit</button>
+    <button class="btn btn-primary"
+            onClick="$('#life-guarding-timespans_subscribe-form').submit()">Uložit
+    </button>
   </div>
 </div>
