--- a/app/views/life_guarding_timespans/select_modal.html.erb
+++ b/app/views/life_guarding_timespans/select_modal.html.erb
@@ -1,7 +1,16 @@
+<%= form_tag(
+            subscribe_life_guarding_timespan_life_guards_path(@life_guarding_timespan, :date => @date, :position => @position),
+            :method => :put, :id => 'life-guarding-timespans_subscribe-form') do |f| %>
+    <label>Zapsat nečlena:</label><%= text_field_tag 'life_guard[person_text]' %>
+<% end %>
+Nebo člena:
 <ul class="nav nav-tabs nav-stacked">
   <% @members.each do |member| %>
     <li>
-    <%= link_to subscribe_life_guarding_timespan_life_guards_path(@life_guarding_timespan, :user => member.id, :date => @date, :position => @position),
+    <%= link_to subscribe_life_guarding_timespan_life_guards_path(@life_guarding_timespan,
+                                                                  :user => member.id,
+                                                                  :date => @date,
+                                                                  :position => @position),
       :method => :put, :remote => true, :data => {:dismiss => "modal"} do %>
     <%= member.profile.try(:full_name) %>
     <% end %>
