uprava tagu pro facebook

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="MS VZS ČČK Třebíč je občanské sdružení jehož cílem je zajišťovat bezpečnost u vody, vodácké akce a jiné sportovní akce. Dále zajišťujeme přednášky a ukázky první předlékařské pomoci." />
-    <meta property="og:image"content="<%=path_to_image("znakVZS_150x150.gif")%>" />
+    <meta property="og:image"content="<%=image_url("znakVZS_150x150.gif")%>" />
     <%= auto_discovery_link_tag :atom, "/feed" %>
     <%= auto_discovery_link_tag :rss, "/feed.rss" %>
 
