Pridani druheho tlacitka do tvorby a upravovani clanku. Zvetseni tlacitek ve formulari

--- a/app/assets/stylesheets/vzs.css.scss
+++ b/app/assets/stylesheets/vzs.css.scss
@@ -79,3 +79,7 @@ img.float.right {
   border: 1px solid rgb(70, 136, 71);
   box-shadow: inset 2px 2px 7px 1px rgba(70, 136, 0, 0.1);
 }
+
+.formtastic .btn {
+  padding: 4px 12px;
+}
