--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,8 @@
 <%= semantic_form_for @article do |f| %>
 	<%= f.semantic_errors %>
+    <%= f.actions do %>
+        <%= f.action :submit, :as => :button, :button_html => { :class => 'btn btn-success btn-large' } %>
+    <% end %>
     <%= f.inputs do %>
       <%= f.input :user %>
       <%= f.input :title %>
@@ -12,6 +15,6 @@
       <%= f.input :group, :as => :select, :collection => group_names, :include_blank => false %>
     <% end %>
     <%= f.actions do %>
-      <%= f.action :submit, :as => :button, :button_html => { :class => 'btn btn-success' } %>
+      <%= f.action :submit, :as => :button, :button_html => { :class => 'btn' } %>
     <% end %>
 <% end %>
