pridani popisku k mistu konani akce

--- a/app/views/events/_pending_event.html.erb
+++ b/app/views/events/_pending_event.html.erb
@@ -53,7 +53,7 @@
                 </div>
                 <div class="row">
                     <div class="span3">
-                        <%= event.place %>
+                        Místo: <%= event.place %>
                     </div>
                 </div>
                 <div class="row">
