--- a/app/views/events/_done_event.html.erb
+++ b/app/views/events/_done_event.html.erb
@@ -41,7 +41,7 @@
                 </div>
                 <div class="row">
                     <div class="span3">
-                        <%= event.place %>
+                        Místo: <%= event.place %>
                     </div>
                 </div>
                 <div class="row">
