--- a/app/views/events/_participation_buttons.html.erb
+++ b/app/views/events/_participation_buttons.html.erb
@@ -1,7 +1,11 @@
 <div class="btn-group">
-  <%= link_to participate_event_path(event), :method => :put, :confirm => "Opravud se přihlásit k akci? Odhlásit Vás může jen vedoucí akce.", :class => "btn btn-mini" do %>
-    Přijdu <%= glyph :ok %>
-  <% end %>
-  <a href="#" class="btn btn-mini">Možná</a>
-  <a href="#" class="btn btn-mini"> Nepřijdu <%= glyph :remove %></a>
+    <%= link_to participate_event_path(event),
+                :method => :put,
+                :confirm => "Opravdu se přihlásit k akci? Odhlásit Vás může jen vedoucí akce.", :class => "btn btn-mini" do %>
+      Přijdu <%= glyph :ok %>
+    <% end %>
+    <a href="#" class="btn btn-mini">Možná</a>
+    <%= link_to no_can_do_event_path(event), :method => :put, :class => "btn btn-mini" do %>
+      Nepřijdu <%= glyph :remove %></a>
+    <% end %>
 </div>
